--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,13 +1,39 @@
-<?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+
 <h:head>
-  <title>Facelet Title</title>
+    <title>CO2 Emissionen Übersicht</title>
 </h:head>
+
 <h:body>
-  Hallo Welt!!
-   
-  Git Test!
+    <h1>CO2-Emissionen</h1>
+
+    <h:form>
+        <table border="1">
+            <!-- Tabellenkopf -->
+            <tr>
+                <th>Land</th>
+                <ui:repeat value="#{cO2EmissionsBean.years}" var="year">
+                    <th>#{year}</th>
+                </ui:repeat>
+            </tr>
+
+            <!-- Tabellendaten -->
+            <ui:repeat value="#{cO2EmissionsBean.emissionRows}" var="row">
+                <tr>
+                    <td>#{row.countryName}</td>
+                    <ui:repeat value="#{cO2EmissionsBean.years}" var="year">
+                        <td>
+                            <h:outputText value="#{row.emissions[year]}" rendered="#{row.emissions[year] ne null}" />
+                            <h:outputText value="—" rendered="#{row.emissions[year] eq null}" />
+                        </td>
+                    </ui:repeat>
+                </tr>
+            </ui:repeat>
+        </table>
+    </h:form>
 </h:body>
 </html>
-
