--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -6,34 +6,64 @@
 
 <h:head>
     <title>CO2 Emissionen Übersicht</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
 </h:head>
 
 <h:body>
-    <h1>CO2-Emissionen</h1>
+    <div class="container">
+	<header class="d-flex flex-wrap align-items-center justify-content-between py-3 mb-4 border-bottom">
+	    <div class="col-md-6 mb-2 mb-md-0">
+	        <h2 class="text-primary m-0">Like Hero to Zero</h2>
+	    </div>
+	
+	    <div class="col-md-6 text-end">
+			<h:panelGroup rendered="#{loginBean.loggedIn}">
+			<h:link outcome="dashboard.xhtml" styleClass="btn btn-outline-primary me-2">Dashboard</h:link>
+			    <h:form styleClass="d-inline">
+			        <h:commandButton value="Logout" action="#{loginBean.logout}" styleClass="btn btn-outline-danger" />
+			    </h:form>
+			</h:panelGroup>
+			
+			<h:panelGroup rendered="#{not loginBean.loggedIn}">
+			    <h:link outcome="login.xhtml" styleClass="btn btn-outline-primary me-2">Login</h:link>
+			    <h:link outcome="register.xhtml" styleClass="btn btn-primary">Registrieren</h:link>
+			</h:panelGroup>
+	    </div>
+	</header>
 
-    <h:form>
-        <table border="1">
-            <!-- Tabellenkopf -->
-            <tr>
-                <th>Land</th>
-                <ui:repeat value="#{cO2EmissionsBean.years}" var="year">
-                    <th>#{year}</th>
-                </ui:repeat>
-            </tr>
 
-            <!-- Tabellendaten -->
-            <ui:repeat value="#{cO2EmissionsBean.emissionRows}" var="row">
-                <tr>
-                    <td>#{row.countryName}</td>
-                    <ui:repeat value="#{cO2EmissionsBean.years}" var="year">
-                        <td>
-                            <h:outputText value="#{row.emissions[year]}" rendered="#{row.emissions[year] ne null}" />
-                            <h:outputText value="—" rendered="#{row.emissions[year] eq null}" />
-                        </td>
-                    </ui:repeat>
-                </tr>
-            </ui:repeat>
-        </table>
-    </h:form>
+        <h:form>
+            <h3 class="mb-4">CO₂-Emissionen</h3>
+
+            <div class="table-responsive">
+                <table class="table table-bordered table-striped align-middle text-center">
+                    <!-- Tabellenkopf -->
+                    <thead class="table-light">
+                        <tr>
+                            <th scope="col">Land</th>
+                            <ui:repeat value="#{cO2EmissionsBean.years}" var="year">
+                                <th scope="col">#{year}</th>
+                            </ui:repeat>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        <ui:repeat value="#{cO2EmissionsBean.emissionRows}" var="row">
+                            <tr>
+                                <td>#{row.countryName}</td>
+                                <ui:repeat value="#{cO2EmissionsBean.years}" var="year">
+                                    <td>
+                                        <h:outputText value="#{row.emissions[year]}" rendered="#{row.emissions[year] ne null}" />
+                                        <h:outputText value="—" rendered="#{row.emissions[year] eq null}" />
+                                    </td>
+                                </ui:repeat>
+                            </tr>
+                        </ui:repeat>
+                    </tbody>
+                </table>
+            </div>
+        </h:form>
+    </div>
 </h:body>
 </html>
+
