--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -15,14 +15,14 @@
                 <h2 class="text-primary m-0">Like Hero to Zero</h2>
             </div>
             <div class="col-md-6 text-end">
-				<h:panelGroup rendered="#{loginBean.loggedIn}">
+				<h:panelGroup rendered="#{userBean.loggedIn}">
 				<h:link outcome="dashboard.xhtml" styleClass="btn btn-outline-primary me-2">Dashboard</h:link>
 				    <h:form styleClass="d-inline">
-				        <h:commandButton value="Logout" action="#{loginBean.logout}" styleClass="btn btn-outline-danger" />
+				        <h:commandButton value="Logout" action="#{userBean.logout}" styleClass="btn btn-outline-danger" />
 				    </h:form>
 				</h:panelGroup>
 				
-				<h:panelGroup rendered="#{not loginBean.loggedIn}">
+				<h:panelGroup rendered="#{not userBean.loggedIn}">
 				    <h:link outcome="index.xhtml" styleClass="btn btn-outline-primary me-2">Startseite</h:link>
 				    <h:link outcome="register.xhtml" styleClass="btn btn-primary">Registrieren</h:link>
 				</h:panelGroup>
@@ -36,15 +36,15 @@
 
             <div class="mb-3">
                 <label for="email" class="form-label">E-Mail-Adresse</label>
-                <h:inputText id="email" value="#{loginBean.email}" label="E-Mail-Adresse" styleClass="form-control" />
+                <h:inputText id="email" value="#{userBean.email}" label="E-Mail-Adresse" styleClass="form-control" />
             </div>
 
             <div class="mb-4">
                 <label for="password" class="form-label">Passwort</label>
-                <h:inputSecret id="password" value="#{loginBean.password}" label="Passwort" styleClass="form-control" />
+                <h:inputSecret id="password" value="#{userBean.password}" label="Passwort" styleClass="form-control" />
             </div>
 
-            <h:commandButton value="Login" action="#{loginBean.login}" styleClass="btn btn-primary w-100" />
+            <h:commandButton value="Login" action="#{userBean.login}" styleClass="btn btn-primary w-100" />
         </h:form>
     </div>
 </h:body>
